--- a/2index.html
+++ b/2index.html
@@ -81,7 +81,7 @@
         </div>
     </div>
     
-    <div id="tabs-wrap">
+    <div id="tabs-wrap"></div>
         <ul id="g-hd-tabs">
             <li class="g-hd-cur"><a data-home="http://www.so.com/?src=tab_www" data-s="http://www.so.com/s?q=%q%&amp;src=tab_www" data-i="web_page" href="http://www.so.com/s?q=%E8%B0%B7%E6%AD%8C&amp;src=tab_www">网页</a></li>
             <li><a data-home="http://news.so.com/?src=tab_www" data-s="http://news.so.com/ns?q=%q%&amp;src=tab_www" data-i="news" href="http://news.so.com/ns?q=%E8%B0%B7%E6%AD%8C&amp;src=tab_www">资讯</a></li>
